changed navbarright in html, vergessen zu commiten

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,12 +19,11 @@
           </a>
           <ul class="dropdown-menu scrollable-menu" id="chapterOverview">
             <li class="liste">
-              <a href="#"><img alt="confirmation" src="images/confirmation.png">
-                CHECK! KOMPETENZENLISTE
+              <a href="#"><img alt="confirmation" src="images/confirmation.png"> CHECK! KOMPETENZENLISTE
               </a>
             </li>
             <li role="separator" class="divider"></li>
-            <div id = "insert"></div>
+            <div id="insert"></div>
             <!--<li class="liste">
               <a href="#"><img alt="confirmation" src="images/confirmation.png">CHECK! KOMPETENZENLISTE</a>
             </li>
@@ -70,7 +69,7 @@
             <li class="liste">
               <a href="#"><img alt="educationalPlan" src="images/educationalPlan-big.png"></a>
             </li>
-            <div id = "insert3"></div>
+            <div id="insert3"></div>
             <!--<li role="separator" class="divider"></li>
             <li class="liste"><a href="#">MATHE ZR BIS 10</a></li>
             <li role="separator" class="divider"></li>
@@ -93,7 +92,7 @@
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">ALLE KOMPETENZEN!</a></li>
             <li role="separator" class="divider"></li>
-            <div id="insert2" ></div>
+            <div id="insert2"></div>
             <!--<li class="liste"><a href="#">DAS BIN ICH</a></li>
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">ICH UND DIE ANDEREN</a></li>
@@ -132,16 +131,12 @@
       </ul>
 
 
-      <div class="col-sm-4 hidden-xs">
+      <div class="col-xs float-xs-right text-xs-right">
         <a class="navbar-brand">
           <img alt="logo" id="logo" src="images/logo.png">
         </a>
       </div>
-
-
-
-
-      <ul class="nav navbar-nav navbar-right col-sm-4">
+      <ul class="nav navbar-nav navbar-right col-xs float-xs-right text-xs-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="superheroPic">
             <img alt="superhero" src="images/student/superhero-robin-inactive.png"></a>
@@ -197,7 +192,7 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="logoutPic">
             <img alt="logout" src="images/logout-iactive.png"></a>
           <ul class="dropdown-menu" id="logout">
             <li class="liste">
