--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -131,7 +131,7 @@
       </ul>
 
 
-      <div class="col-xs float-xs-right text-xs-right">
+      <div class="hidden-xs">
         <a class="navbar-brand">
           <img alt="logo" id="logo" src="images/logo.png">
         </a>
