--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
             <img alt="chapterOverview" src="images/chapterOverview-inactive.png">
           </a>
           <ul class="dropdown-menu scrollable-menu" id="chapterOverview">
-            <li class="liste">
+            <li class="liste arrow_box">
               <a href="#"><img alt="confirmation" src="images/confirmation.png"> CHECK! KOMPETENZENLISTE
               </a>
             </li>
@@ -66,7 +66,7 @@
             <img alt="educationalPlan" src="images/educationalPlan-inactive.png">
           </a>
           <ul class="dropdown-menu" id="educationalPlan">
-            <li class="liste">
+            <li class="liste arrow_box">
               <a href="#"><img alt="educationalPlan" src="images/educationalPlan-big.png"></a>
             </li>
             <div id="insert3"></div>
@@ -83,7 +83,7 @@
             <img alt="achievedCompetences" src="images/achievedCompetences-inactive.png">
           </a>
           <ul class="dropdown-menu scrollable-menu" id="achievedCompetences">
-            <li class="liste">
+            <li class="liste arrow_box">
               <a href="#"><img alt="achievedCompetences" src="images/achievedCompetences-big.png">
                 <p>DAS<br> KANN<br> ICH!</p>
               </a>
@@ -141,7 +141,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="superheroPic">
             <img alt="superhero" src="images/student/superhero-robin-inactive.png"></a>
           <ul class="dropdown-menu" id="superhero">
-            <li class="liste">
+            <li class="liste arrow_box">
               <a href="#"><img alt="superhero" src="images/student/superhero-robin-big-active.png"></a>
             </li>
             <li role="separator" class="divider"></li>
@@ -157,7 +157,7 @@
             <img alt="school" src="images/school/school-inactive.png">
           </a>
           <ul class="dropdown-menu" id="school">
-            <li class="liste">
+            <li class="liste arrow_box">
               <a href="#"><img alt="school" src="images/school/school-purple-big-active.png"></a>
             </li>
           </ul>
@@ -176,7 +176,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="helpPic">
             <img alt="help" src="images/help-inactive.png"></a>
           <ul class="dropdown-menu" id="help">
-            <li class="liste">
+            <li class="liste arrow_box">
               <a href="#"><img alt="help" src="images/help-big.png">
                 <p>BRAUCHST <br> DU HILFE?</p>
               </a>
@@ -195,7 +195,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="logoutPic">
             <img alt="logout" src="images/logout-iactive.png"></a>
           <ul class="dropdown-menu" id="logout">
-            <li class="liste">
+            <li class="liste arrow_box">
               <a href="#"><img id="inListPic" alt="logout" src="images/logout-big.png">
                 <p> MÖCHTEST DU<br> CHECK! <br>VERLASSEN?</p>
               </a>
