changes in dropdownmenü, vivi,fritz,seda

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
             <img alt="chapterOverview" src="images/chapterOverview-inactive.png">
           </a>
           <ul class="dropdown-menu scrollable-menu" id="chapterOverview">
-            <li class="liste arrow_box">
+            <li class="liste arrow_box_left">
               <a href="#"><img alt="confirmation" src="images/confirmation.png"> CHECK! KOMPETENZENLISTE
               </a>
             </li>
@@ -66,7 +66,7 @@
             <img alt="educationalPlan" src="images/educationalPlan-inactive.png">
           </a>
           <ul class="dropdown-menu" id="educationalPlan">
-            <li class="liste arrow_box">
+            <li class="liste arrow_box_left">
               <a href="#"><img alt="educationalPlan" src="images/educationalPlan-big.png"></a>
             </li>
             <div id="insert3"></div>
@@ -83,7 +83,7 @@
             <img alt="achievedCompetences" src="images/achievedCompetences-inactive.png">
           </a>
           <ul class="dropdown-menu scrollable-menu" id="achievedCompetences">
-            <li class="liste arrow_box">
+            <li class="liste arrow_box_left">
               <a href="#"><img alt="achievedCompetences" src="images/achievedCompetences-big.png">
                 <p>DAS<br> KANN<br> ICH!</p>
               </a>
@@ -166,7 +166,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="studyGroupPic">
             <img alt="studyGroup" src="images/studyGroup/studyGroup_2b_inactive.png"></a>
           <ul class="dropdown-menu" id="studyGroup">
-            <li class="liste">
+            <li class="liste arrow_box">
               <a href="#"><img alt="studyGroup" src="images/studyGroup/studyGroup_2b_active-big.png"></a>
             </li>
 
