--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -46,7 +46,7 @@ html {
 }
 
 .dropdown-menu {
-  top: 140%;
+  top: 125%;
   border-color: white;
   border-width: 3px;
   padding-top: 15px;
@@ -54,38 +54,7 @@ html {
   border-radius: 5px;
 }
 
-
-/*sprechblase
-
-.dropdown-menu:before {
-  width: 250px;
-  height: 100px;
-  margin-top: 30px;
-  -webkit-transform: rotate(360deg);
-  border-style: solid;
-  border-color: transparent transparent #34c7ac transparent;
-}
-
-.navbar-nav>ul:before {
-  content: ' ';
-  -webkit-transform: rotate(360deg);
-  position: absolute;
-  width: 0;
-  height: 0;
-  right: 130px;
-  top: -200px;
-  border: 15px solid;
-  border-color: transparent transparent #34c7ac transparent;
-}
-*/
-
-arrow_box {
-  position: relative;
-  background: #88b7d5;
-  /*border: 4px solid #c2e1f5;*/
-}
-
-.arrow_box:after, .arrow_box:before {
+.arrow_box:after, .arrow_box:before, .arrow_box_left:after, .arrow_box_left:before {
   bottom: 100%;
   left: 90%;
   border: solid transparent;
@@ -96,14 +65,18 @@ arrow_box {
   /*pointer-events: none;*/
 }
 
-.arrow_box:after {
+.arrow_box_left:after, .arrow_box_left:before {
+  left: 10%;
+}
+
+.arrow_box:after, .arrow_box_left:after {
   border-color: rgba(255, 255, 255, 0);
   border-bottom-color: #001a3a;
   border-width: 10px;
   margin-left: -10px;
 }
 
-.arrow_box:before {
+.arrow_box:before, .arrow_box_left:before {
   border-color: rgba(255, 255, 255, 0);
   border-bottom-color: white;
   border-width: 16px;
