--- a/checkconfirmation.css
+++ b/checkconfirmation.css
@@ -1,92 +1,31 @@
-    #header {
-        display: block;
-        margin-left: 400px;
-    }
+body {
+    background-color: black;
+}
 
-    form {
-        position: absolute;
-        left: 50%;
-    }
+#popup {
+    position: absolute;
+    background-color: #76b82d !important;
+    left: 25%;
+    top: 30%;
+    width: 350px;
+    height: 250px;
+    font-size: 13 pt;
+    border: 4px solid white;
+    border-radius: 10px;
+}
 
-    .form-control {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        color: #001a3a;
-        width: 300px;
-        height: 40px;
-        border-color: #d3ddf2;
-        border-width: medium;
-    }
+#delete {
+    margin-top: 10px;
+    margin-left: 310px;
+}
 
-    input[type=email]:focus, input[type=password]:focus {
-        border-color: #001a3a;
-        font-size: 13pt;
-    }
+#configuration {
+    margin-top: -20px;
+    margin-left: 130px;
+}
 
-    #sprechblase {
-        position: relative;
-        background-color: #76b82d !important;
-        width: 300px;
-        height: 200px;
-        font-size: 13 pt;
-        font-family: Roboto Thin;
-        border: 4px solid white;
-        margin-right: auto;
-        margin-left: auto;
-        margin-top: -150px;
-        border-radius: 20px;
-        text-align: center;
-    }
-
-    #löschsymbol {
-        margin-top: 10px;
-        margin-left: 260px;
-    }
-
-    #confir {
-        margin-top: -30px;
-        margin-left: 110px;
-    }
-
-    #platzhalterText {
-        text-align: center;
-        color: white;
-    }
-
-    #Login {
-        margin-top: 20px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    #footer {
-        margin-top: 100px;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    #edition {
-        font-size: 9pt;
-        color: #001a3a;
-        display: block;
-        text-align: center;
-    }
-
-    #ersteZeile {
-        font-family: Roboto Thin;
-        font-size: 9pt;
-        color: #8da6d6;
-        text-align: center;
-        white-space: nowrap;
-    }
-
-    #letzteZeile {
-        margin-top: -10px;
-        font-size: 9pt;
-        font-family: Roboto Thin;
-        color: #8da6d6;
-        text-align: center;
-    }
+#textfeld {
+    margin-top: 20px;
+    text-align: center;
+    color: white;
+}
