--- a/checkconfirmation.css
+++ b/checkconfirmation.css
@@ -1,12 +1,8 @@
-body {
-    background-color: black;
-}
-
 #popup {
-    position: absolute;
+    display: block;
+    margin: auto;
+    margin-top: 150px;
     background-color: #76b82d !important;
-    left: 25%;
-    top: 30%;
     width: 350px;
     height: 250px;
     font-size: 13 pt;
