Changed: header.css Pfeil nicht in mehr mobiler Ansicht -Seda, Fritz, Vivi

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -111,6 +111,11 @@ html {
 
 /*mobile Ansicht*/
 @media (max-width: 767px) {
+
+  .arrow_box:after, .arrow_box:before, .arrow_box_left:after, .arrow_box_left:before{
+    display: none !important;
+  }
+  
   .hidden-xs {
     display: none !important;
   }
