huge update: added new services to deal with avatars and changing content, updated several other classes as well. sadly no time for styling

--- a/src/app/changepassword/changepassword.component.html
+++ b/src/app/changepassword/changepassword.component.html
@@ -10,16 +10,16 @@
     <div class="form-group">
       <label for="password" class="col-sm-4 control-label" id="Label1">AKTUELLES PASSWORT* </label>
       <div class="col-sm-4">
-        <input type="password" class="form-control" id="inputFeld1">
+        <input type="password" class="form-control" id="inputFeld1" #oldPw>
       </div>
     </div>
   </div>
   <!--Eingabefeld neues Passwort-->
   <div align="center">
     <div class="form-group">
-      <label for="password" class="col-sm-4 control-label" id="Label2">NEUES PASSWORT* </label>
+      <label for="password" class="col-sm-4 control-label" id="Label2" >NEUES PASSWORT* </label>
       <div class="col-sm-4">
-        <input type="password" class="form-control" id="inputFeld2">
+        <input type="password" class="form-control" id="inputFeld2" #newPw>
       </div>
     </div>
   </div>
@@ -28,11 +28,11 @@
     <div class="form-group">
       <label for="eingabefeldPasswortBestätigen" class="col-sm-4 control-label" id="Label3">PASSWORT BESTÄTIGUNG*</label>
       <div class="col-sm-4">
-        <input type="password" class="form-control" id="inputFeld3">
+        <input type="password" class="form-control" id="inputFeld3" #newPwCheck>
       </div>
     </div>
   </div>
   <div align="center">
-    <button type="button" class="btn btn-primary" id="PWaendern">ÄNDERN</button>
+    <button type="button" class="btn btn-primary" (click)="changePw(oldPw.value,newPw.value,newPwCheck.value)" id="PWaendern">ÄNDERN</button>
   </div>
 </form>
