--- a/src/app/changeprofilepicture/changeprofilepicture.component.css
+++ b/src/app/changeprofilepicture/changeprofilepicture.component.css
@@ -40,11 +40,14 @@
   }
 }
 
-#pic1, #pic2, #pic3, #pic4, #pic5, #pic6 {
+
+
+
+/*#pic1, #pic2, #pic3, #pic4, #pic5, #pic6 {
   display: inline-block;
   margin-top: 20px;
 }
 
 #pic7, #pic8, #pic9, #pic10, #pic11, #pic12 {
   display: inline-block;
-}
+}*/
