--- a/src/app/changeprofilepicture/changeprofilepicture.component.html
+++ b/src/app/changeprofilepicture/changeprofilepicture.component.html
@@ -1,26 +1,33 @@
-<img src="images-master\student\superhero-robin-big-active.png" class="img-responsive" id="header" alt="header">
+<img src="{{avatarList[currentAvatar]?.image.imageUrlBig}}" class="img-responsive" id="header" alt="header">
 
 
 <p id="ProfilbildAendern">PROFILBILD ÄNDERN</p>
 
 <div align="center">
   <button type="button" class="btn btn-primary" id="abbrechen">ABBRECHEN</button>
-  <button type="button" class="btn btn-primary" id="speichern">SPEICHERN</button>
+  <button type="button" (click)="updateAvatar()" class="btn btn-primary" id="speichern">SPEICHERN</button>
 </div>
-<div align="center">
-  <img src="images-master\student\superhero-batman-big-active.png" class="img-responsive" id="pic1" alt="profilbild">
-  <img src="images-master\student\superhero-catwoman-big-active.png" class="img-responsive" id="pic2" alt="profilbild">
-  <img src="images-master\student\superhero-gandalf-big-active.png" class="img-responsive" id="pic3" alt="profilbild">
-  <img src="images-master\student\superhero-greenlatern-big-active.png" class="img-responsive" id="pic4" alt="profilbild">
-  <img src="images-master\student\superhero-hulk-big-active.png" class="img-responsive" id="pic5" alt="profilbild">
-  <img src="images-master\student\superhero-kickass-big-active.png" class="img-responsive" id="pic6" alt="profilbild">
+<div align="center" id="heroWrapper" >
+  
+    <ng-container *ngFor = "let cAvatar of avatarList">
+      
+      <img style="display: inline-block;margin-top: 20px;" src="{{cAvatar?.image.imageUrlBig}}" id = "{{cAvatar?.id}}" class="img-responsive" alt="profilbild" (click)="changeCurrentAvatar(cAvatar?.id)">
+    </ng-container>
+  
+  <!--<img src="images\student\superhero-batman-big-active.png" class="img-responsive" id="pic1" alt="profilbild">
+  <img src="images\student\superhero-catwoman-big-active.png" class="img-responsive" id="pic2" alt="profilbild">
+  <img src="images\student\superhero-gandalf-big-active.png" class="img-responsive" id="pic3" alt="profilbild">
+  <img src="images\student\superhero-greenlatern-big-active.png" class="img-responsive" id="pic4" alt="profilbild">
+  <img src="images\student\superhero-hulk-big-active.png" class="img-responsive" id="pic5" alt="profilbild">
+  <img src="images\student\superhero-kickass-big-active.png" class="img-responsive" id="pic6" alt="profilbild">-->
 
 </div>
-<div align="center">
-  <img src="images-master\student\superhero-luke-big-active.png" class="img-responsive" id="pic7" alt="profilbild">
-  <img src="images-master\student\superhero-robin-big-active.png" class="img-responsive" id="pic8" alt="profilbild">
-  <img src="images-master\student\superhero-skeletor-big-active.png" class="img-responsive" id="pic9" alt="profilbild">
-  <img src="images-master\student\superhero-spiderman-big-active.png" class="img-responsive" id="pic10" alt="profilbild">
-  <img src="images-master\student\superhero-superman-big-active.png" class="img-responsive" id="pic11" alt="profilbild">
-  <img src="images-master\student\superhero-superwoman-big-active.png" class="img-responsive" id="pic12" alt="profilbild">
-</div>
+<!--<div align="center">
+  <img src="images\student\superhero-luke-big-active.png" class="img-responsive" id="pic7" alt="profilbild">
+  <img src="images\student\superhero-robin-big-active.png" class="img-responsive" id="pic8" alt="profilbild">
+  <img src="images\student\superhero-skeletor-big-active.png" class="img-responsive" id="pic9" alt="profilbild">
+  <img src="images\student\superhero-spiderman-big-active.png" class="img-responsive" id="pic10" alt="profilbild">
+  <img src="images\student\superhero-superman-big-active.png" class="img-responsive" id="pic11" alt="profilbild">
+  <img src="images\student\superhero-superwoman-big-active.png" class="img-responsive" id="pic12" alt="profilbild">
+</div>-->
+
