--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,12 +14,12 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav col-sm-4">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <img alt="chapterOverview" src="images/chapterOverview-inactive.png">
           </a>
           <ul class="dropdown-menu scrollable-menu" id="chapterOverview">
             <li class="liste arrow_box_left">
-              <a href="#"><img alt="confirmation" src="images/confirmation.png"> CHECK! KOMPETENZENLISTE
+              <a href=""><img alt="confirmation" src="images/confirmation.png"> CHECK! KOMPETENZENLISTE
               </a>
             </li>
 
@@ -27,7 +27,7 @@
             <!--<div  id = "insert">-->
             <ng-container *ngFor = "let chapter of chapters">
               <li role="separator" class="divider"></li>
-              <li class="liste"><a href="#"> {{chapter?.name}} </a></li>
+              <li class="liste"  id={{chapter.id}}><a href="#"> {{chapter?.name}} </a></li>
             </ng-container>
             
                 
@@ -159,15 +159,15 @@
       <ul class="nav navbar-nav navbar-right col-xs float-xs-right text-xs-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="superheroPic">
-            <img alt="superhero" src="images/student/superhero-robin-inactive.png"></a>
+            <img alt="superhero" src="{{avatarPicture?.image.imageUrlInactive}}"></a>
           <ul class="dropdown-menu" id="superhero">
             <li class="liste arrow_box">
-              <a href="#"><img alt="superhero" src="images/student/superhero-robin-big-active.png"></a>
+              <a><img alt="superhero" src="{{avatarPicture?.image.imageUrlBig}}"></a>
             </li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">MEIN PROFIL ÄNDERN</a></li>
+            <li class="liste"><a href="#" routerLink="/changeprofilepicture">MEIN PROFIL ÄNDERN</a></li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">MEIN PASSWORT ÄNDERN</a></li>
+            <li class="liste"><a href="#" routerLink="/changepw">MEIN PASSWORT ÄNDERN</a></li>
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#" routerLink="/deleteprofile" routerLinkActive="active">MEIN PROFIL LÖSCHEN</a></li>
           </ul>
@@ -178,17 +178,27 @@
           </a>
           <ul class="dropdown-menu" id="school">
             <li class="liste arrow_box">
-              <a href="#"><img alt="school" src="images/school/school-purple-big-active.png"></a>
+              <a href="#"><img alt="school" src="images/school/school-purple-big-active.png">
+              </a>
+              <a>{{studentData?.school.adress}}</a>
+              <a>{{studentData?.school.country}} </a>
+              <a>{{studentData?.school.email}} </a>
+              <a>{{studentData?.school.telefon}} </a>
             </li>
           </ul>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="studyGroupPic">
-            <img alt="studyGroup" src="images/studyGroup/studyGroup_2b_inactive.png"></a>
+            <img alt="studyGroup" src="{{studentData?.studyGroup?.image?.imageUrlInactive}}">
+          </a>
           <ul class="dropdown-menu" id="studyGroup">
 
             <li class="liste arrow_box">
-              <a href="#"><img alt="studyGroup" src="{{student?.studyGroup?.image?.imageUrlBig}}"></a>
+              <a href="#"><img src="{{studentData?.studyGroup?.image?.imageUrlBig}}">
+              </a>
+              <a>Klasse:  {{studentData?.studyGroup.classNumber}}</a>
+              <a>Klassenlehrerin: {{studentData?.formteacher}}</a>
+             
             </li>
 
           </ul>
@@ -198,18 +208,18 @@
             <img alt="help" src="images/help-inactive.png"></a>
           <ul class="dropdown-menu" id="help">
             <li class="liste arrow_box">
-              <a href="#"><img alt="help" src="images/help-big.png">
+              <a ><img alt="help" src="images/help-big.png">
                 <p>BRAUCHST <br> DU HILFE?</p>
               </a>
             </li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">SO GEHT'S!</a></li>
+            <li class="liste"><a href="http://www.check-lehrerzimmer.com/hilfe/erste-schritte/">SO GEHT'S!</a></li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">VIDEO-TUTORIALS</a></li>
+            <li class="liste"><a href="http://www.check-lehrerzimmer.com/tutorial/">VIDEO-TUTORIALS</a></li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">HÄUFIG GESTELLTE FRAGEN</a></li>
+            <li class="liste"><a href="http://www.check-lehrerzimmer.com/faq/">HÄUFIG GESTELLTE FRAGEN</a></li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">KONTAKT</a></li>
+            <li class="liste"><a href="http://www.check-lehrerzimmer.com/contact/">KONTAKT</a></li>
           </ul>
         </li>
         <li class="dropdown">
@@ -222,9 +232,9 @@
               </a>
             </li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">JA</a></li>
+            <li class="liste"><a href="http://www.google.de" >JA</a></li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">NEIN</a></li>
+            <li class="liste"><a href="#" routerLink="/home">NEIN</a></li>
           </ul>
         </li>
       </ul>
