--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,6 @@
 
 
-<div class = container [style.backround] = backroundColor>
+<div appParseCss backroundColor = {{backroundColor}} class = container >
 	<div class="item-b" id = left>
 		<img src="{{imageLeft}}">
 	</div>
